// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should match the snapshot of when it recieves the planet props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    climate="padawan"
    name="padawan"
    population="padawan"
    residents="residents"
    terrain="padawan"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        null,
        <div
          className="card planet-card"
>
          <Button
                    favorited={undefined}
                    handleFavorite={undefined}
                    name="padawan"
                    section="favorite"
          />
          <h2>
                    name: 
                    padawan
          </h2>
          <h3>
                    terrain: 
                    padawan
          </h3>
          <h4>
                    population: 
                    padawan
          </h4>
          <h5>
                    climate: 
                    padawan
          </h5>
          <h4>
                    residents: 
                    residents
          </h4>
</div>,
      ],
      "className": "category-card",
    },
    "ref": null,
    "rendered": Array [
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              favorited={undefined}
              handleFavorite={undefined}
              name="padawan"
              section="favorite"
/>,
            <h2>
              name: 
              padawan
</h2>,
            <h3>
              terrain: 
              padawan
</h3>,
            <h4>
              population: 
              padawan
</h4>,
            <h5>
              climate: 
              padawan
</h5>,
            <h4>
              residents: 
              residents
</h4>,
          ],
          "className": "card planet-card",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "favorited": undefined,
              "handleFavorite": undefined,
              "name": "padawan",
              "section": "favorite",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "name: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "name: ",
              "padawan",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "terrain: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "terrain: ",
              "padawan",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "population: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "population: ",
              "padawan",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "climate: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "climate: ",
              "padawan",
            ],
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "residents: ",
                "residents",
              ],
            },
            "ref": null,
            "rendered": Array [
              "residents: ",
              "residents",
            ],
            "type": "h4",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          null,
          <div
            className="card planet-card"
>
            <Button
                        favorited={undefined}
                        handleFavorite={undefined}
                        name="padawan"
                        section="favorite"
            />
            <h2>
                        name: 
                        padawan
            </h2>
            <h3>
                        terrain: 
                        padawan
            </h3>
            <h4>
                        population: 
                        padawan
            </h4>
            <h5>
                        climate: 
                        padawan
            </h5>
            <h4>
                        residents: 
                        residents
            </h4>
</div>,
        ],
        "className": "category-card",
      },
      "ref": null,
      "rendered": Array [
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                favorited={undefined}
                handleFavorite={undefined}
                name="padawan"
                section="favorite"
/>,
              <h2>
                name: 
                padawan
</h2>,
              <h3>
                terrain: 
                padawan
</h3>,
              <h4>
                population: 
                padawan
</h4>,
              <h5>
                climate: 
                padawan
</h5>,
              <h4>
                residents: 
                residents
</h4>,
            ],
            "className": "card planet-card",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "favorited": undefined,
                "handleFavorite": undefined,
                "name": "padawan",
                "section": "favorite",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "name: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "name: ",
                "padawan",
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "terrain: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "terrain: ",
                "padawan",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "population: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "population: ",
                "padawan",
              ],
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "climate: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "climate: ",
                "padawan",
              ],
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "residents: ",
                  "residents",
                ],
              },
              "ref": null,
              "rendered": Array [
                "residents: ",
                "residents",
              ],
              "type": "h4",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card component should match the snapshot when it receives vehicle props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    model="padawan"
    name="padawan"
    passengerCount="padawan"
    vehicleClass="padawan"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="card vehicle-card"
>
          <Button
                    favorited={undefined}
                    handleFavorite={undefined}
                    name="padawan"
                    section="favorite"
          />
          <h2>
                    name: 
                    padawan
          </h2>
          <h3>
                    model: 
                    padawan
          </h3>
          <h4>
                    class: 
                    padawan
          </h4>
          <h5>
                    passengers: 
                    padawan
          </h5>
</div>,
        null,
        null,
      ],
      "className": "category-card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              favorited={undefined}
              handleFavorite={undefined}
              name="padawan"
              section="favorite"
/>,
            <h2>
              name: 
              padawan
</h2>,
            <h3>
              model: 
              padawan
</h3>,
            <h4>
              class: 
              padawan
</h4>,
            <h5>
              passengers: 
              padawan
</h5>,
          ],
          "className": "card vehicle-card",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "favorited": undefined,
              "handleFavorite": undefined,
              "name": "padawan",
              "section": "favorite",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "name: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "name: ",
              "padawan",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "model: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "model: ",
              "padawan",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "class: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "class: ",
              "padawan",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "passengers: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "passengers: ",
              "padawan",
            ],
            "type": "h5",
          },
        ],
        "type": "div",
      },
      null,
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="card vehicle-card"
>
            <Button
                        favorited={undefined}
                        handleFavorite={undefined}
                        name="padawan"
                        section="favorite"
            />
            <h2>
                        name: 
                        padawan
            </h2>
            <h3>
                        model: 
                        padawan
            </h3>
            <h4>
                        class: 
                        padawan
            </h4>
            <h5>
                        passengers: 
                        padawan
            </h5>
</div>,
          null,
          null,
        ],
        "className": "category-card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                favorited={undefined}
                handleFavorite={undefined}
                name="padawan"
                section="favorite"
/>,
              <h2>
                name: 
                padawan
</h2>,
              <h3>
                model: 
                padawan
</h3>,
              <h4>
                class: 
                padawan
</h4>,
              <h5>
                passengers: 
                padawan
</h5>,
            ],
            "className": "card vehicle-card",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "favorited": undefined,
                "handleFavorite": undefined,
                "name": "padawan",
                "section": "favorite",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "name: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "name: ",
                "padawan",
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "model: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "model: ",
                "padawan",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "class: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "class: ",
                "padawan",
              ],
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "passengers: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "passengers: ",
                "padawan",
              ],
              "type": "h5",
            },
          ],
          "type": "div",
        },
        null,
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card component should match the snapshot when it recieves people props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    homeworld="padawan"
    homeworldPopulation="padawan"
    name="padawan"
    species="padawan"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        <div
          className="card person-card"
>
          <Button
                    favorited={undefined}
                    handleFavorite={undefined}
                    name="padawan"
                    section="favorite"
          />
          <h2>
                    name: 
                    padawan
          </h2>
          <h3>
                    species: 
                    padawan
          </h3>
          <h4>
                    homeworld: 
                    padawan
          </h4>
          <h5>
                    homeworld population: 
                    padawan
          </h5>
</div>,
        null,
      ],
      "className": "category-card",
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              favorited={undefined}
              handleFavorite={undefined}
              name="padawan"
              section="favorite"
/>,
            <h2>
              name: 
              padawan
</h2>,
            <h3>
              species: 
              padawan
</h3>,
            <h4>
              homeworld: 
              padawan
</h4>,
            <h5>
              homeworld population: 
              padawan
</h5>,
          ],
          "className": "card person-card",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "favorited": undefined,
              "handleFavorite": undefined,
              "name": "padawan",
              "section": "favorite",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "name: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "name: ",
              "padawan",
            ],
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "species: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "species: ",
              "padawan",
            ],
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "homeworld: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "homeworld: ",
              "padawan",
            ],
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "homeworld population: ",
                "padawan",
              ],
            },
            "ref": null,
            "rendered": Array [
              "homeworld population: ",
              "padawan",
            ],
            "type": "h5",
          },
        ],
        "type": "div",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="card person-card"
>
            <Button
                        favorited={undefined}
                        handleFavorite={undefined}
                        name="padawan"
                        section="favorite"
            />
            <h2>
                        name: 
                        padawan
            </h2>
            <h3>
                        species: 
                        padawan
            </h3>
            <h4>
                        homeworld: 
                        padawan
            </h4>
            <h5>
                        homeworld population: 
                        padawan
            </h5>
</div>,
          null,
        ],
        "className": "category-card",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                favorited={undefined}
                handleFavorite={undefined}
                name="padawan"
                section="favorite"
/>,
              <h2>
                name: 
                padawan
</h2>,
              <h3>
                species: 
                padawan
</h3>,
              <h4>
                homeworld: 
                padawan
</h4>,
              <h5>
                homeworld population: 
                padawan
</h5>,
            ],
            "className": "card person-card",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "favorited": undefined,
                "handleFavorite": undefined,
                "name": "padawan",
                "section": "favorite",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "name: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "name: ",
                "padawan",
              ],
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "species: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "species: ",
                "padawan",
              ],
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "homeworld: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "homeworld: ",
                "padawan",
              ],
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "homeworld population: ",
                  "padawan",
                ],
              },
              "ref": null,
              "rendered": Array [
                "homeworld population: ",
                "padawan",
              ],
              "type": "h5",
            },
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
